Fixed some css regarding spacing of name and ID in recents

--- a/src/Pages/Components/infobox.scss
+++ b/src/Pages/Components/infobox.scss
@@ -9,7 +9,6 @@ $vectorLightBlue: #335C9A;
   border-bottom: 2px solid #948f8fd3;
   display: flex;
   margin: 10%;
-  justify-content: space-evenly;
 }
 
 .Idbox {
@@ -24,6 +23,21 @@ $vectorLightBlue: #335C9A;
   justify-content: space-evenly;
 }
 
-.Idnum,.customer {
+.Idnum,.customer,.info-top {
+  text-align: left    ;
   font-size: 20px;
+  font-family: 'DM Sans', sans-serif;
+}
+
+// .customer {
+//   margin-left: auto;
+//   margin-right: 20%;
+// }
+.Idnum {
+  margin-left: 20%;
+}
+
+.customer {
+  margin-right: auto;
+  margin-left: 25%;
 }
